ab alignment fix and header started

--- a/frontend/styles/global/header.scss
+++ b/frontend/styles/global/header.scss
@@ -32,6 +32,7 @@
         align-items: center;
         grid-template-columns: 1fr auto 1fr;
         padding: 0.75em 2em;
+        border-bottom: 1px solid $color-primary;
     }
     &__search {
         label {
@@ -114,5 +115,8 @@
                 display: none;
             }
         }
+    }
+    &__navigation {
+        padding: 1em 2em;
     }
 }
